--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Windows - 11</title>
+    <title>Windows 11</title>
 </head>
 
 <body>
@@ -25,16 +25,16 @@
     </div>
 
     <div class="icons">
-        <img src="chromeicon.png" width="74" alt="">
-        <div>Google</div>
-        <div id="chrometxt">Chrome</div>
+        <img id="chromeicon" src="chromeicon.svg" width="44" alt="">
+        <div class="app-name">Google</div>
+        <div class="app-name" id="chrometxt">Chrome</div>
 
-        <img id="edgeicon" src="edgeicon.png" width="40" alt="">
-        <div>Edge</div>
+        <img id="edgeicon" src="edgeicon.svg" width="40" alt="">
+        <div class="app-name">Edge</div>
 
-        <img src="recyclebinicon.png" width="44" alt="">
-        <div>Recycle</div>
-        <div id="chrometxt">Bin</div>
+        <img src="recyclebinicon.webp" width="44" alt="">
+        <div class="app-name">Recycle</div>
+        <div class="app-name" id="chrometxt">Bin</div>
     </div>
 </body>
 <script src="script.js"></script>
