--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A Windows 11 replica written entirely in HTML, CSS, and JS.">
     <link rel="stylesheet" href="style.css">
-    <title>Windows 11</title>
+    <title>Windows 11 Replica</title>
 </head>
 
 <body>
