--- a/index.html
+++ b/index.html
@@ -26,16 +26,14 @@
     </div>
 
     <div class="icons">
-        <img id="chromeicon" src="chromeicon.svg" width="44" alt="">
-        <div class="app-name">Google</div>
-        <div class="app-name" id="chrometxt">Chrome</div>
+        <img id="chromeicon" src="chromeicon.svg" width="40" alt="">
+        <div class="app-name" id="chrometxt">Google Chrome</div>
 
         <img id="edgeicon" src="edgeicon.svg" width="40" alt="">
-        <div class="app-name">Edge</div>
+        <div class="app-name" id="chrometxt">Microsoft Edge</div>
 
         <img src="recyclebinicon.webp" width="44" alt="">
-        <div class="app-name">Recycle</div>
-        <div class="app-name" id="chrometxt">Bin</div>
+        <div class="app-name" id="chrometxt">Recycle Bin</div>
     </div>
 </body>
 <script src="script.js"></script>
