--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A Windows 11 replica written entirely in HTML, CSS, and JS.">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/css/style.css">
     <title>Windows 11 Replica</title>
 </head>
 
 <body>
     <div class="taskbar">
         <img src="icons.PNG" alt="">
-        <img class="right" src="taskbarright.PNG" alt="" srcset="">
+        <img class="right" src="src/images/taskbarright.PNG" alt="" srcset="">
     </div>
 
     <!-- <video autoplay muted>
@@ -22,20 +22,20 @@
     <!-- <video src="video.webm" autoplay></video> -->
 
     <div class="startmenu">
-        <img src="startmenu.PNG" alt="">
+        <img src="src/images/startmenu.PNG" alt="">
     </div>
 
     <div class="icons">
-        <img id="chromeicon" src="chromeicon.svg" width="40" alt="">
+        <img id="chromeicon" src="src/images/chromeicon.svg" width="40" alt="">
         <div class="app-name" id="chrometxt">Google Chrome</div>
 
-        <img id="edgeicon" src="edgeicon.svg" width="40" alt="">
+        <img id="edgeicon" src="src/images/edgeicon.svg" width="40" alt="">
         <div class="app-name" id="chrometxt">Microsoft Edge</div>
 
-        <img src="recyclebinicon.webp" width="44" alt="">
+        <img src="src/images/recyclebinicon.webp" width="44" alt="">
         <div class="app-name" id="chrometxt">Recycle Bin</div>
     </div>
 </body>
-<script src="script.js"></script>
+<script src="src/js/script.js"></script>
 
 </html>
