Fixed some issues

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="taskbar">
-        <img src="icons.PNG" alt="">
+        <img src="src/images/icons.PNG" alt="">
         <img class="right" src="src/images/taskbarright.PNG" alt="" srcset="">
     </div>
 
